fixtures/valid/layered-tasks/src/features/tasks/browser/app.ts
import { taskLabel } from "../shared/task.js";

void taskLabel;
