fixtures/invalid/module-boundary-transitive/src/features/tasks/browser/app.ts
import { taskContract } from "../shared/task.js";

void taskContract;
